Opdatering ift. håndtering af manglende cookies

--- a/Framework/InitAllApplications.xaml
+++ b/Framework/InitAllApplications.xaml
@@ -5,7 +5,7 @@
   <VisualBasic.Settings>
     <x:Null />
   </VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1161,1451</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1234,4760</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>Initialization_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -40,6 +40,7 @@
       <x:String>System.ComponentModel</x:String>
       <x:String>System.Xml.Serialization</x:String>
       <x:String>UiPath.Core.Activities.Orchestrator</x:String>
+      <x:String>System.Activities.Runtime.Collections</x:String>
     </sco:Collection>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
@@ -94,7 +95,7 @@
       <AssemblyReference>System.Memory.Data</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="Open applications used in the process and do necessary initialization procedures (e.g., login)." DisplayName="Initialize All Applications" sap:VirtualizedContainerService.HintSize="496,1386" sap2010:WorkflowViewState.IdRef="Sequence_9">
+  <Sequence sap2010:Annotation.AnnotationText="Open applications used in the process and do necessary initialization procedures (e.g., login)." DisplayName="Initialize All Applications" sap:VirtualizedContainerService.HintSize="676,4695" sap2010:WorkflowViewState.IdRef="Sequence_9">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="CaseNumber" />
       <Variable x:TypeArguments="sd:DataTable" Name="dt_CaseNumber" />
@@ -102,6 +103,7 @@
       <Variable x:TypeArguments="x:String" Name="LogonWebSession" />
       <Variable x:TypeArguments="x:String" Name="VerificationToken" />
       <Variable x:TypeArguments="x:String" Name="CurrentTimestamp" />
+      <Variable x:TypeArguments="x:Boolean" Name="RetrievedValuesBool" />
     </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -109,35 +111,158 @@
         <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="NovaLogin_New.xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="434,113" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="NovaLogin_New.xaml">
-      <ui:InvokeWorkflowFile.Arguments>
-        <OutArgument x:TypeArguments="x:String" x:Key="out_requestVerificationToken">[RequestVerification]</OutArgument>
-        <OutArgument x:TypeArguments="x:String" x:Key="out_kmdLogonWebSessionHandler">[LogonWebSession]</OutArgument>
-        <OutArgument x:TypeArguments="x:String" x:Key="Out_VerificationToken">[VerificationToken]</OutArgument>
-      </ui:InvokeWorkflowFile.Arguments>
-    </ui:InvokeWorkflowFile>
-    <ui:SetAsset TimeoutMS="{x:Null}" AssetName="KMDRequestVerificationNovaToFilarkiv" DisplayName="Set Asset" sap:VirtualizedContainerService.HintSize="434,194" sap2010:WorkflowViewState.IdRef="SetAsset_1" Value="[RequestVerification]" />
-    <ui:SetAsset TimeoutMS="{x:Null}" AssetName="KMDVerificationTokenNovaToFilarkiv" DisplayName="Set Asset" sap:VirtualizedContainerService.HintSize="434,194" sap2010:WorkflowViewState.IdRef="SetAsset_3" Value="[VerificationToken]" />
-    <ui:SetAsset TimeoutMS="{x:Null}" AssetName="KMDLogonWebSessionNovaToFilarkiv" DisplayName="Set Asset" sap:VirtualizedContainerService.HintSize="434,194" sap2010:WorkflowViewState.IdRef="SetAsset_2" Value="[LogonWebSession]" />
-    <Assign sap2010:Annotation.AnnotationText="henter nuværende dato og tid" DisplayName="Assign current time" sap:VirtualizedContainerService.HintSize="434,113" sap2010:WorkflowViewState.IdRef="Assign_1">
+    <Assign sap:VirtualizedContainerService.HintSize="614,82" sap2010:WorkflowViewState.IdRef="Assign_5">
       <Assign.To>
-        <OutArgument x:TypeArguments="x:String">[CurrentTimestamp]</OutArgument>
+        <OutArgument x:TypeArguments="x:Boolean">[RetrievedValuesBool]</OutArgument>
       </Assign.To>
       <Assign.Value>
-        <InArgument x:TypeArguments="x:String">[System.DateTime.now.ToString("dd-MM-yyyy HH:mm:ss",new System.Globalization.CultureInfo("da-DK"))]</InArgument>
+        <InArgument x:TypeArguments="x:Boolean">False</InArgument>
       </Assign.Value>
-      <sap:WorkflowViewStateService.ViewState>
-        <scg:Dictionary x:TypeArguments="x:String, x:Object">
-          <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
-        </scg:Dictionary>
-      </sap:WorkflowViewStateService.ViewState>
     </Assign>
-    <ui:SetAsset TimeoutMS="{x:Null}" sap2010:Annotation.AnnotationText="Det nye timestamp opdateres i orchestrator " AssetName="KMDWebTimeStampNovaToFilarkiv" DisplayName="Set Asset" sap:VirtualizedContainerService.HintSize="434,225" sap2010:WorkflowViewState.IdRef="SetAsset_4" Value="[CurrentTimestamp]">
+    <ui:RetryScope DisplayName="Retry Scope" sap:VirtualizedContainerService.HintSize="614,4431" sap2010:WorkflowViewState.IdRef="RetryScope_2" NumberOfRetries="5" RetryInterval="00:00:30">
+      <ui:RetryScope.ActivityBody>
+        <ActivityAction>
+          <Sequence DisplayName="Action" sap:VirtualizedContainerService.HintSize="572,4142" sap2010:WorkflowViewState.IdRef="Sequence_14">
+            <sap:WorkflowViewStateService.ViewState>
+              <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+              </scg:Dictionary>
+            </sap:WorkflowViewStateService.ViewState>
+            <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="NovaLogin_New.xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="510,113" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="NovaLogin_New.xaml">
+              <ui:InvokeWorkflowFile.Arguments>
+                <OutArgument x:TypeArguments="x:String" x:Key="out_requestVerificationToken">[RequestVerification]</OutArgument>
+                <OutArgument x:TypeArguments="x:String" x:Key="out_kmdLogonWebSessionHandler">[LogonWebSession]</OutArgument>
+                <OutArgument x:TypeArguments="x:String" x:Key="Out_VerificationToken">[VerificationToken]</OutArgument>
+              </ui:InvokeWorkflowFile.Arguments>
+            </ui:InvokeWorkflowFile>
+            <If Condition="[String.IsNullOrEmpty(RequestVerification) OrElse&#xD;&#xA;String.IsNullOrEmpty(LogonWebSession) OrElse&#xD;&#xA;String.IsNullOrEmpty(VerificationToken)]" sap:VirtualizedContainerService.HintSize="510,3878" sap2010:WorkflowViewState.IdRef="If_2">
+              <If.Then>
+                <Sequence sap:VirtualizedContainerService.HintSize="476,1523" sap2010:WorkflowViewState.IdRef="Sequence_15">
+                  <sap:WorkflowViewStateService.ViewState>
+                    <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                      <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                    </scg:Dictionary>
+                  </sap:WorkflowViewStateService.ViewState>
+                  <Assign sap:VirtualizedContainerService.HintSize="434,82" sap2010:WorkflowViewState.IdRef="Assign_6">
+                    <Assign.To>
+                      <OutArgument x:TypeArguments="x:Boolean">[RetrievedValuesBool]</OutArgument>
+                    </Assign.To>
+                    <Assign.Value>
+                      <InArgument x:TypeArguments="x:Boolean">False</InArgument>
+                    </Assign.Value>
+                  </Assign>
+                  <If Condition="[String.IsNullOrEmpty(RequestVerification)]" sap:VirtualizedContainerService.HintSize="434,411" sap2010:WorkflowViewState.IdRef="If_3">
+                    <If.Then>
+                      <Sequence sap:VirtualizedContainerService.HintSize="376,229" sap2010:WorkflowViewState.IdRef="Sequence_17">
+                        <sap:WorkflowViewStateService.ViewState>
+                          <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                            <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                          </scg:Dictionary>
+                        </sap:WorkflowViewStateService.ViewState>
+                        <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="334,141" sap2010:WorkflowViewState.IdRef="LogMessage_4" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;Mangler requestvarification: &quot;+RequestVerification]" />
+                      </Sequence>
+                    </If.Then>
+                    <If.Else>
+                      <Sequence sap:VirtualizedContainerService.HintSize="300,80" sap2010:WorkflowViewState.IdRef="Sequence_18">
+                        <sap:WorkflowViewStateService.ViewState>
+                          <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                            <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                          </scg:Dictionary>
+                        </sap:WorkflowViewStateService.ViewState>
+                      </Sequence>
+                    </If.Else>
+                  </If>
+                  <If Condition="[String.IsNullOrEmpty(VerificationToken)]" sap:VirtualizedContainerService.HintSize="434,411" sap2010:WorkflowViewState.IdRef="If_4">
+                    <If.Then>
+                      <Sequence sap:VirtualizedContainerService.HintSize="376,229" sap2010:WorkflowViewState.IdRef="Sequence_19">
+                        <sap:WorkflowViewStateService.ViewState>
+                          <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                            <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                          </scg:Dictionary>
+                        </sap:WorkflowViewStateService.ViewState>
+                        <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="334,141" sap2010:WorkflowViewState.IdRef="LogMessage_5" Message="[&quot;Mangler VerificationToken: &quot;+ VerificationToken]" />
+                      </Sequence>
+                    </If.Then>
+                    <If.Else>
+                      <Sequence sap2010:WorkflowViewState.IdRef="Sequence_20" />
+                    </If.Else>
+                  </If>
+                  <If Condition="[String.IsNullOrEmpty(LogonWebSession)]" sap:VirtualizedContainerService.HintSize="434,411" sap2010:WorkflowViewState.IdRef="If_5">
+                    <If.Then>
+                      <Sequence sap:VirtualizedContainerService.HintSize="376,229" sap2010:WorkflowViewState.IdRef="Sequence_21">
+                        <sap:WorkflowViewStateService.ViewState>
+                          <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                            <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                          </scg:Dictionary>
+                        </sap:WorkflowViewStateService.ViewState>
+                        <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="334,141" sap2010:WorkflowViewState.IdRef="LogMessage_9" Level="[UiPath.Core.Activities.LogLevel.Trace]" Message="[&quot;Mangler LogonWebSession: &quot; + LogonWebSession]" />
+                      </Sequence>
+                    </If.Then>
+                    <If.Else>
+                      <Sequence sap2010:WorkflowViewState.IdRef="Sequence_22" />
+                    </If.Else>
+                  </If>
+                </Sequence>
+              </If.Then>
+              <If.Else>
+                <Sequence sap:VirtualizedContainerService.HintSize="476,2173" sap2010:WorkflowViewState.IdRef="Sequence_16">
+                  <sap:WorkflowViewStateService.ViewState>
+                    <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                      <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                    </scg:Dictionary>
+                  </sap:WorkflowViewStateService.ViewState>
+                  <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="434,141" sap2010:WorkflowViewState.IdRef="LogMessage_10" Message="[&quot;Det lykkedes at hente alle tre cookies&quot;]" />
+                  <Assign sap:VirtualizedContainerService.HintSize="434,82" sap2010:WorkflowViewState.IdRef="Assign_3">
+                    <Assign.To>
+                      <OutArgument x:TypeArguments="x:Boolean">[RetrievedValuesBool]</OutArgument>
+                    </Assign.To>
+                    <Assign.Value>
+                      <InArgument x:TypeArguments="x:Boolean">True</InArgument>
+                    </Assign.Value>
+                  </Assign>
+                  <ui:SetAsset TimeoutMS="{x:Null}" AssetName="KMDRequestVerificationNovaToFilarkiv" DisplayName="Set Asset" sap:VirtualizedContainerService.HintSize="434,194" sap2010:WorkflowViewState.IdRef="SetAsset_1" Value="[RequestVerification]" />
+                  <ui:SetAsset TimeoutMS="{x:Null}" AssetName="KMDVerificationTokenNovaToFilarkiv" DisplayName="Set Asset" sap:VirtualizedContainerService.HintSize="434,194" sap2010:WorkflowViewState.IdRef="SetAsset_3" Value="[VerificationToken]" />
+                  <ui:SetAsset TimeoutMS="{x:Null}" AssetName="KMDLogonWebSessionNovaToFilarkiv" DisplayName="Set Asset" sap:VirtualizedContainerService.HintSize="434,194" sap2010:WorkflowViewState.IdRef="SetAsset_2" Value="[LogonWebSession]" />
+                  <Assign sap2010:Annotation.AnnotationText="henter nuværende dato og tid" DisplayName="Assign current time" sap:VirtualizedContainerService.HintSize="434,113" sap2010:WorkflowViewState.IdRef="Assign_4">
+                    <Assign.To>
+                      <OutArgument x:TypeArguments="x:String">[CurrentTimestamp]</OutArgument>
+                    </Assign.To>
+                    <Assign.Value>
+                      <InArgument x:TypeArguments="x:String">[System.DateTime.now.ToString("dd-MM-yyyy HH:mm:ss",new System.Globalization.CultureInfo("da-DK"))]</InArgument>
+                    </Assign.Value>
+                    <sap:WorkflowViewStateService.ViewState>
+                      <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                        <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
+                      </scg:Dictionary>
+                    </sap:WorkflowViewStateService.ViewState>
+                  </Assign>
+                  <ui:SetAsset TimeoutMS="{x:Null}" sap2010:Annotation.AnnotationText="Det nye timestamp opdateres i orchestrator " AssetName="KMDWebTimeStampNovaToFilarkiv" DisplayName="Set Asset" sap:VirtualizedContainerService.HintSize="434,225" sap2010:WorkflowViewState.IdRef="SetAsset_5" Value="[CurrentTimestamp]">
+                    <sap:WorkflowViewStateService.ViewState>
+                      <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                        <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
+                      </scg:Dictionary>
+                    </sap:WorkflowViewStateService.ViewState>
+                  </ui:SetAsset>
+                  <ui:SetAsset TimeoutMS="{x:Null}" AssetName="KMDRequestVerificationNovaToFilarkiv" DisplayName="Set Asset" sap:VirtualizedContainerService.HintSize="434,194" sap2010:WorkflowViewState.IdRef="SetAsset_6" Value="[RequestVerification]" />
+                  <ui:SetAsset TimeoutMS="{x:Null}" AssetName="KMDVerificationTokenNovaToFilarkiv" DisplayName="Set Asset" sap:VirtualizedContainerService.HintSize="434,194" sap2010:WorkflowViewState.IdRef="SetAsset_7" Value="[VerificationToken]" />
+                  <ui:SetAsset TimeoutMS="{x:Null}" AssetName="KMDLogonWebSessionNovaToFilarkiv" DisplayName="Set Asset" sap:VirtualizedContainerService.HintSize="434,194" sap2010:WorkflowViewState.IdRef="SetAsset_8" Value="[LogonWebSession]" />
+                </Sequence>
+              </If.Else>
+            </If>
+          </Sequence>
+        </ActivityAction>
+      </ui:RetryScope.ActivityBody>
+      <ui:RetryScope.Condition>
+        <ActivityFunc x:TypeArguments="x:Boolean">
+          <ui:CheckTrue ErrorMessage="{x:Null}" DisplayName="Check True" Expression="[RetrievedValuesBool]" sap:VirtualizedContainerService.HintSize="334,129" sap2010:WorkflowViewState.IdRef="CheckTrue_1" />
+        </ActivityFunc>
+      </ui:RetryScope.Condition>
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
-          <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
+          <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+          <x:Boolean x:Key="IsPinned">False</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-    </ui:SetAsset>
+    </ui:RetryScope>
   </Sequence>
 </Activity>
